# ssh-remote-control

./: .mcp.json  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
scripts/: build_plugin_bundle.py  install_local.sh  run_server.py
skills/ssh-remote-control/: SKILL.md
src/ssh_remote_control/: __init__.py  credential_store.py  models.py  profile_store.py  remote_cli.py  remote_codex.py  server.py  session_manager.py
src/ssh_remote_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_build_plugin_bundle.py  test_credential_store.py  test_profile_store.py  test_remote_cli.py  test_remote_codex.py  test_server.py  test_session_manager.py
